Fix some spacing around recent favs

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ ul {
     font-size: 18px;
 }
 
-img {
+#top-pic {
     width: 250px;
     margin: 20px 0px;
     height: auto;
@@ -65,8 +65,8 @@ h1 {
 .img-fav {
     display: flex;
     gap: 20px;
-    justify-content: center;
     width: 150px;
+    align-items: center;
 }
 
 .img-fav img {
@@ -81,7 +81,6 @@ h1 {
 
 .fav-text {
     display: flex;
-    justify-content: center;
     font-size: 12px;
     width: 150px;
     gap: 20px;
